--- a/templates/base.html
+++ b/templates/base.html
@@ -2,8 +2,43 @@
 <html>
 <head>
 <meta charset="utf-8">
+<title>Events</title>
+<style>
+body {
+    font-family: monospace;
+}
+.box {
+    background: #ccc;
+    display: inline-block;
+    font-size: 32px;
+    padding: 0.25em;
+    margin-right: 0.25em;
+    margin-bottom: 0.25em;
+}
+.box a {
+    background: #000;
+    color: #fff;
+    padding: 0.25em;
+}
+.left {
+    float: left;
+}
+.right {
+    float: right;
+}
+.highlight {
+    background: #0f0;
+}
+</style>
 </head>
 <body>
+<div id="header">
+<h1>Events</h1>
+<form method="get">
+<label for="filter">Filter:</label><input id="filter" type="text" name="filter" value="7"><br>
+<input type="submit">
+</form>
+</div>
 <div class="content">
 {% block content %}{% endblock %}
 </div>
