--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<ul>
-{% for file in files %}
-<li>{{file}}</li>
+{% for day in days %}
+<div class="day-container"></div>
+<h2 class="date">1970-01-01</h2>
+{% for file in day.files %}
+<div class="box" data-fileref="{{file}}>
+<img src="{{file}}" title="{{file}}" style="width: 512px; height: 384px;">
+<div><a href="{{file}}" class="left">Movie</a><a href="#" class="right delete-button">X</a></div>
+</div>
 {% endfor %}
-</ul>
+{% endfor %}
 {% endblock %}
