--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-{% for day in days %}
+{% for day, files in days.items() %}
 <div class="day-container"></div>
-<h2 class="date">1970-01-01</h2>
-{% for file in day.files %}
+<h2 class="date">{{day}}</h2>
+{% for file in files %}
 <div class="box" data-fileref="{{file}}">
 <img src="file/{{file}}" title="{{file}}" style="width: 512px; height: 384px;">
 <div><a href="file/{{file}}" class="left">Movie</a><a href="#" class="right delete-button">X</a></div>
