--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,9 @@
 <div class="day-container">
 <h2 class="date">{{day}}</h2>
 {% for file in files %}
-<div class="box" data-fileref="{{file}}">
-<img src="file/{{file}}" title="{{file}}" style="width: 512px; height: 384px;">
-<div><a href="file/{{file}}" class="left">Movie</a><a href="#" class="right delete-button">X</a></div>
+<div class="box" data-fileref="{{file.fileref}}">
+<img src="file/{{file.image_path}}" title="{{file.fileref}}" style="width: 512px; height: 384px;">
+<div><a href="file/{{file.image_path}}" class="left">Movie</a><a href="#" class="right delete-button">X</a></div>
 </div>
 {% endfor %}
 </div>
