--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 {% for file in files %}
 <div class="box" data-fileref="{{file.fileref}}">
 <img src="file/{{file.image_path}}" title="{{file.fileref}}" style="width: 512px; height: 384px;">
-<div><a href="file/{{file.image_path}}" class="left">Movie</a><a href="#" class="right delete-button">X</a></div>
+<div><a href="file/{{file.video_path}}" class="left">Movie</a><a href="#" class="right delete-button">X</a></div>
 </div>
 {% endfor %}
 </div>
